<resources>
    <string name="app_name">章鱼棒球</string>

    <string name="skip">跳过</string>

    <string name="qq">QQ</string>
    <string name="wx">微信</string>
    <string name="xl">新浪</string>

    <string name="binding">绑定</string>
    <string name="unbundle">解绑</string>

    <string name="sure_unbundle_qq">确定取消绑定QQ?</string>
    <string name="sure_unbundle_wx">确定取消绑定微信?</string>
    <string name="sure_unbundle_wb">确定取消绑定微博?</string>

    <!--主页模块-->
    <string name="information">资讯</string>
    <string name="video">视频</string>
    <string name="my">我的</string>



    <!--我的模块-->
    <string name="my_message">我的消息</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_account">账号</string>
    <string name="my_setting">设置</string>



    <!--设置-->
    <string name="security_account">账号与安全</string>
    <string name="push_notification">推送通知</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_over">已清理缓存</string>
    <string name="if_clear_cache">是否清理缓存？</string>
    <string name="hint">提示</string>
    <string name="the_cache_is_convenient_you_browse_content">缓存方便您浏览内容</string>

    <string name="share_friend">分享给好友</string>
    <string name="about_us">关于我们</string>

    <string name="go_out">退出登陆</string>

    <string name="social_account">社交帐号绑定</string>

    <string name="setting_failed">设置失败</string>
    <string name="setting_success">设置成功</string>

    <!--账号安全-->
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="phone_binding">手机绑定</string>
    <string name="account_binding">社交账号绑定</string>
    <string name="register_time">注册时间</string>
    <string name="setting_picture">设置图片</string>

    <!--登陆-->
    <string name="speediness_login">快速登陆</string>
    <string name="new_user">新用户</string>
    <string name="register">注册</string>
    <string name="fg_account">/非攻账号</string>
    <string name="login">登陆</string>
    <string name="look_around">随便看看</string>


    <string name="check_wx">检测是否安装微信</string>
    <string name="auth_canceled">取消授权</string>
    <string name="auth_failed">授权失败</string>
    <string name="handler_error">处理失败</string>
    <string name="auth_success">授权成功</string>

    <string name="get_user_info_error">获取用户信息失败</string>


    <string name="take_photo">拍照</string>
    <string name="get_picture_error">获取图片失败</string>
    <string name="update_picture_error">图片上传失败</string>
    <string name="form_picture">来自相簿</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <string name="operation_failed_please_try_again_later">操作失败，请稍后再试</string>


    <string name="issue">发布</string>
    <string name="comment_content">评论内容</string>
    <string name="comment_defeated">评论失败</string>
    <string name="comment_succeed">评论成功</string>


    <!--hint-->
    <string name="input_not_null">输入不能为空！</string>
    <string name="comments_to_failure_please_try_again_later">评论发表失败，请稍后再来！</string>

    <string name="not_get_more_data">未获取到更多数据</string>

    <string name="loading_data_error">数据加载失败</string>

    <string name="phone">手机号</string>
    <string name="input_phone_error">手机号输入错误</string>
    <string name="input_phone_code">输入手机验证码</string>
    <string name="send_phone_code_error">验证码发送错误</string>
    <string name="phone_bind_error">手机绑定失败</string>


</resources>
