<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/tv_take_photo"
            style="@style/take_picture_bg"
            android:text="@string/take_photo"
            />

        <TextView
            android:id="@+id/tv_take_form"
            style="@style/take_picture_bg"
            android:text="@string/form_picture"
            />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/take_picture_bg"
            android:text="@string/cancel"
            />
    </LinearLayout>
</RelativeLayout>